# dot-ai-config

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  USAGE.md  bashrc  closeable-issues-report.md  email.html  email.md  gitconfig  gitignore_global  mise.toml  note.md  sync.sh  tmux.conf  zshenv  zshrc
.claude/: CLAUDE.md
.codex/: config.toml
2025-10-29/: SUMMARY.md
dot_ai/: DOCUMENTATION_REQUESTS.md  SUMMARY.md  TODO.md  dot_ai  nx-architecture.md
dot_claude/: AGENTS.md  CLAUDE.md  CODEX.md  settings.json  settings.local.json
dot_gemini/: CODEX.md  GEMINI.md  settings.json
fish/: config.fish
gh-dash/: config.yml
gh-proxy/: go.mod  main.go
hooks/: pre-push
kitty/: dark-theme.auto.conf  diff.conf  kitty.conf  light-theme.auto.conf
mcp-gemini/: CHANGELOG.md  FUTURE_TOOLS.md  config.example.json  pyproject.toml  server.py
mcp-gemini/mcp_gemini/: server.py
mcp-gemini/mcp_gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-server/: INSTALL.md  README.md  pyproject.toml  pytest.ini  run_tests.py  start.sh
mcp-server/mcp_ai_content_server/: __main__.py  config.py  content_extractors.py  content_indexer.py  directory_monitor.py  logging_config.py  search_engine.py  semantic_search.py  server.py  synchronization.py  validation.py
mcp-server/setup/macos/: README.md  ca.jaysoo.mcp-ai-content-server.plist  install.sh  uninstall.sh
mcp-server/tests/: __init__.py  test_content_extractors.py  test_content_indexer.py  test_directory_monitor.py  test_integration.py  test_search_engine.py
nvim/: init.lua  lazy-lock.json
(+1860 files in other folders)
