[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_ai_content_server"
version = "0.1.0"
description = "MCP server for AI-generated content search and retrieval"
authors = [
    {name = "Jack Hsu", email = "jack.hsu@gmail.com"},
]
dependencies = [
    "mcp>=1.9.3",
    "pathlib2>=2.3.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
target-version = "py38"
line-length = 88

[project.scripts]
mcp-ai-content-server = "mcp_ai_content_server.server:main"
